--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <img src="images/vertical b& w.png" />
         </div>
         <div class="image-box">
-          <img src="images/jumper b*w.png" />
+          <img src="images/joearcade.jpeg" />
         </div>
         <div class="image-box">
           <img src="images/checkeredshirt.jpeg" />
