--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <nav role="navigation" class="footer-navigation">
       <ul>
         <li>
-          Copyright &copy; 2021. Website screated by Stephen Cheung & associates. All Rights Reserved.
+          Copyright &copy; 2021. Website created by Stephen Cheung & associates. All Rights Reserved.
         </li>
       </ul>
     </nav>
