--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
         <ul class="site-header-right">
           <li>
-            <a href="#about">Model Statistics</a>
+            <a href="#about">Model Info</a>
           </li>
           <li>
             <a href="#contact">Contact</a>
@@ -88,7 +88,7 @@
     <div id="about"></div>
     <section role="region" class="photo-about">
       <div class="container">
-        <h2>Model Statistics</h2>
+        <h2>Model Info</h2>
       
       <p><strong>Height:</strong>  6' 1"<br>
         <strong>Chest:</strong>
