--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <input type="email" placeholder="Email Address">
           <input type="phone" placeholder="Phone Number">
           <input type="text" placeholder="Requested Date">
-          <textarea placeholder="Something"></textarea>
+          <textarea placeholder="Write your message here"></textarea>
           <button type="submit" class="button button-primary">Send</button>
         </form>
       </div>
