--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Joseph Morlin</title>
-  
+  <link rel="icon" type="image/x-icon" href="camerafav.png" >
   <link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
